2007-07-22  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Navigation/Enumerator.cs, Navigation/Function.cs,
	  Navigation/Variable.cs, Navigation/Enumeration.cs,
	  Navigation/Union.cs, Navigation/Namespace.cs,
	  Navigation/Typedef.cs, Navigation/Structure.cs,
	  Navigation/Macro.cs, Navigation/LanguageItem.cs,
	  Navigation/Class.cs, Navigation/Member.cs: Moved to
	  CBinding.Parser.
	* Gui/CTextEditorExtension.cs, Gui/DataProvider.cs, Parser/Tag.cs,
	  Parser/TagDatabaseManager.cs, CBinding.mdp: Implemented simple
	  parameters completion.

2007-07-19  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Send -fPIC to the compiler if the compile
	  target is a shared library (Is this really needed?).

2007-07-19  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Fixed a bug in dependency tracking.

2007-07-18  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, Project/ProjectPackageCollection.cs,
	  Project/CProject.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic, CBinding.addin.xml,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs: Fixed several bugs.
	* Makefile.am, ProjectPad/ProjectPackageNodeBuilder.cs,
	  icons/Icons.16x16.ProjectReference, CBinding.mdp: Project packages
	  have a different icon.

2007-07-17  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/gui.stetic: Got the edit packages dialog to work with
	  adding packages from projects in the combine (though it's a bit
	  buggy)

2007-07-15  Marcos David Marín Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs, Project/ProjectPackage.cs,
	  Project/CProjectServiceExtension.cs, Project/CProject.cs,
	  Compiler/CCompiler.cs,
	  ProjectPad/ProjectPackagesFolderNodeBuilder.cs,
	  ProjectPad/ProjectPackageNodeBuilder.cs: Projects can now depend on